--- a/home/index.html
+++ b/home/index.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fluidmap | Visualisation et d'anticipation Paris 2024</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="fm-cookies">
+        <p>En continuant votre navigation sur notre site, vous acceptez l’utilisation des cookies.</p>
+        <button class="fm-btn--light ">J'accepte</button>
+    </div>
     <header>
 <h1 class="fm-title">
-    <img src="" alt="fluidmap">
+    <img src="./img/img.png" alt="fluidmap" width="280">
 </h1>
-<p class="fm-subtitle"></p>
-<img src="" alt="">
+<p class="fm-subtitle">L’outil de visualisation et d'anticipation de densités de personnes en zone urbaine</p>
+<img class="fm-pres--img" src="./img/home.png" alt="home" width="50%">
 <p></p>
 <hr>
     </header>
@@ -43,7 +48,9 @@
             <li>
                 <div class="fm-card"><img src="" alt=""></div>
             </li>
-            <div class="fm-card-glb"></div>
+            <div class="fm-card-glb">
+
+            </div>
         </ul>
     </div>
     <div class="fm-try">
@@ -54,8 +61,19 @@
         <p></p>
         <div class="fm-try-sub">
             <h2></h2>
+            <button class="fm-btn"></button>
         </div>
         
     </div>
+    <div class="fm-map">
+            <h2>
+
+                </h2>
+                <p></p>
+                <img src="" alt="">
+    </div>
+    <footer>
+
+    </footer>
 </body>
 </html>
