--- a/home/index.html
+++ b/home/index.html
@@ -18,35 +18,38 @@
 </h1>
 <p class="fm-subtitle">L’outil de visualisation et d'anticipation de densités de personnes en zone urbaine</p>
 <img class="fm-pres--img" src="./img/home.png" alt="home" width="50%">
-<p></p>
-<hr>
+
     </header>
     <div class="fm-service">
+            <p class="fm-firsttext">Fluidmap est pensé pour vous aider à anticiper les densités de fréquentations de Paris 2024. </p>
+            <hr>
         <ul>
-            <li><i></i><h3></h3><p></p></li>
-            <li><i></i><h3></h3><p></p></li>
-            <li><i></i><h3></h3><p></p></li>
+            <li><img src="img/Shape.svg" alt="" width="25px">
+                <h3>Prévision des densités</h3><p>Préparez la période des JO en un clin d’oeil grâce à notre outils de prévision des flux</p></li>
+            <li><img src="img/Shape2.svg" alt="" width="25px"><h3>Notifications</h3><p>Pendant les JO recevez des alertes en temps réel pour être toujours informé.</p></li>
+            <li><img src="img/Shape3.svg" alt="" width="25px"><h3>Synchronisation</h3><p>Sur mobile ou ordinateur,
+                vos données sont accessibles depuis n’importe où.</p></li>
         </ul>
     </div>
     <div class="fm-datarealtime">
             <a href="" class="fm-arrow"></a>
             <i></i>
         <h2>
-            
+            Données en temps réel 
         </h2>
-        <p></p>
+        <p>Avec Fluidmap, prennez le contrôle sur nos données, et explorez les différents evenements pour savoir où se situera les densités les plus importantes et quand !</p>
         <ul>
             <li>
-                <div class="fm-card"><img src="" alt=""></div>
+                <div class="fm-card"><img src="img/Preset 1.png" alt=""></div>
             </li>
             <li>
-                <div class="fm-card"><img src="" alt=""></div>
+                <div class="fm-card"><img src="img/Preset 2.png" alt=""></div>
             </li>
             <li>
-                <div class="fm-card"><img src="" alt=""></div>
+                <div class="fm-card"><img src="img/Preset 3.png" alt=""></div>
             </li>
             <li>
-                <div class="fm-card"><img src="" alt=""></div>
+                <div class="fm-card"><img src="img/Preset 4.png" alt=""></div>
             </li>
             <div class="fm-card-glb">
 
@@ -55,22 +58,25 @@
     </div>
     <div class="fm-try">
             <img src="" alt="">
-        <h2>
+        <h2>Naviguez à travers les épreuves
 
         </h2>
-        <p></p>
+        <p>
+            Depuis notre carte accèdez à tout les evenements sportifs des JO de Paris 2024, le lieu, les horraires ou encore les transports en commun à proximité, fluidmap regroupe et traite toutes ces informations.x
+        </p>
         <div class="fm-try-sub">
-            <h2></h2>
-            <button class="fm-btn"></button>
+            <h2>Essayez Fluidmapx
+                gratuitement</h2>
+            <button class="fm-btn">Découvrir le service</button>
         </div>
         
     </div>
     <div class="fm-map">
             <h2>
-
+                Carte de chaleur
                 </h2>
-                <p></p>
-                <img src="" alt="">
+                <p>Notre carte de chaleur fournis une représentation graphique des flux de personnes sur tout Paris par tranche de 2 heures. Vous pourrez ainsi clairement savoir ou se déplace ces flux.</p>
+                <img src="img/Rectangle 12.png" alt="">
     </div>
     <footer>
 
