--- a/home/index.html
+++ b/home/index.html
@@ -75,7 +75,7 @@
                 gratuitement</h2>
                 <br>
                 
-            <a href="https://app.fluidmap.fr/"> <button class="fm-btn--primary">Découvrir l'application</button></a> <a href="https://api.fluidmap.fr/"><button  class="fm-btn--light">Accéder à l'api</button></a>
+            <a href="https://fluidmap.fr/"> <button class="fm-btn--primary">Découvrir l'application</button></a> <a href="https://api.fluidmap.fr/"><button  class="fm-btn--light">Accéder à l'api</button></a>
         </div>
     <div class="fm-map">
             <img src="img/ic_event_black_24px.svg" alt="">
